--- a/localshop/templates/packages/simple_package_detail.html
+++ b/localshop/templates/packages/simple_package_detail.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8" />
 
-        <title>Links for {{ package.name }}</title>
+        <title>Links for {{ package.info.name }}</title>
 
         <style>
             a { display: block; }
@@ -10,17 +10,10 @@
     </head>
     <body>
 
-    <h1>Links for {{ package.name }}</h1>
+    <h1>Links for {{ package.info.name }}</h1>
 
-{% for release in releases %}
-    {% for file in release.files.all %}
-        <a href="{{ file.get_absolute_url }}" rel="package">{{ file.filename }}</a>
-    {% empty %}
-        {% if release.home_page and release.home_page != 'UNKNOWN' %}
-            <a href="{{ release.home_page }}" rel="homepage">{{ release.version }} home_page</a>
-        {% endif %}
-        {% if release.download_url and release.download_url != 'UNKNOWN'  %}
-            <a href="{{ release.download_url }}" rel="download">{{ release.version }} download_url</a>
-        {% endif %}
+{% for version, release_files in package.releases.items %}
+    {% for file in release_files %}
+        <a href="{{ file.url }}" rel="package">{{ file.filename }}</a>
     {% endfor %}
 {% endfor %}
